AWS secrets manager bulk loading cli options for eth2 mode (#589)
* AWS secrets manager bulk loading cli option for eth2 mode
* unit and acceptance tests
* signers version to 2.2.3
* Vertx version to 4.3.1 and override netty-all to 4.1.77.Final
* Suppress annoying netty warnings at Web3Signer startup
* Use custom BodyHandler instance