@@ -355,7 +355,13 @@ applicationDefaultJvmArgs = [
   // We shutdown log4j ourselves, as otherwise his shutdown hook runs before our own and whatever
   // happens during shutdown is not logged.
   "-Dlog4j.shutdownHookEnabled=false",
-  "-Dlog4j2.formatMsgNoLookups=true"
+  "-Dlog4j2.formatMsgNoLookups=true",
+  // address netty warnings
+  "--add-opens",
+  "java.base/jdk.internal.misc=ALL-UNNAMED",
+  "--add-opens",
+  "java.base/java.nio=ALL-UNNAMED",
+  "-Dio.netty.tryReflectionSetAccessible=true",
 ]
 
 run {
